fix(submission): fix extra space after last codebox

--- a/src/components/CodeBox.module.less
+++ b/src/components/CodeBox.module.less
@@ -1,6 +1,10 @@
 .codeBox {
   margin-top: 0px;
   margin-bottom: 14px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .codeBoxSegment {
